# STATION_MASTER_DAW

./: .gitignore  FIXES.md  GEMINI.md  README.md  STATION_DAW_OVERVIEW.md  ai-update.yml  audio_engine.py  bug_procedure.md  dsp_effects.py  install.sh  main.py  project_manager.py  pyproject.toml  smoke_test.py
archive_md/: station_daw_performance_fix.md
newtest/audio/: clip_79040a90-ef5b-41d2-837d-5d0bd1a80cf9.flac
test/audio/: clip_01924b57-0377-47be-89d3-59f3d63188cc.flac
